# portfolio-website

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  gunicorn_config.py  next-sitemap.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs  prod.Dockerfile  pyproject.toml  tailwind.config.ts  tsconfig.json
docker/certbot/: Dockerfile  certify-init.sh
docker/nginx/: Dockerfile  start-nginx.sh
docker/nginx/conf.d/: default-ssl.conf.tmp  default.conf.tmp
nginx/: Dockerfile  default.conf  start-nginx.sh
nginx/conf.d/: default.conf.template
portfolio/accounts/: admin.py  models.py
portfolio/accounts/migrations/: 0001_initial.py  0002_alter_user_about.py  0003_user_github_user_linkedin.py  0004_user_about_picture.py
portfolio/main/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
portfolio/main/migrations/: 0001_initial.py  0002_project_slug.py  0002_stack_project_content_alter_tag_name_project_stack.py  0003_project_card_img_alter_project_content_and_more.py
portfolio/main/templates/: base.html  home.html  project.html
portfolio/portfolio/: settings.py  urls.py
src/actions/: contact.ts  getPublicEnv.ts  sendEmail.ts
src/app/: layout.tsx  page.tsx
src/components/: About.tsx  Background.tsx  Contact.tsx  Footer.tsx  GoogleAnalytics.tsx  Hero.tsx  NavBar.tsx  Projects.tsx
src/data/: about_content.ts  index.ts  projects.ts
src/hooks/: useAnimationVariants.ts
src/styles/: background.scss  globals.css
src/types/: animation.ts
(+33 files in other folders)
